--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,24 @@
 body {
     padding-top: 5rem;
 }
+
+ button
+ {
+  border-radius:18%;
+  color:white;
+  background-color: #3B9ACC;
+  padding: 5px;
+  padding-left:15px;
+  padding-right: 15px;
+ }
+ 
+ .boxes{
+  border-radius: 5px;
+  width:300px;
+ }
+ 
+ .mbox{
+  border-radius: 5px;
+  width:400px;
+  height:100px;
+ }
