missed a bracket on line 42 contact.html

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -39,7 +39,7 @@
  Please enter the message you would like to send.</br>
 </label>
 </br>
- {{ form.messages(class='boxes' }}
+ {{ form.messages(class='boxes') }}
 
 </br></br>
  
